# Password-less-Student-Portal-Login

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  wsgi.py
app/: __init__.py  cli.py  config.py  extensions.py  models.py
app/admin/: routes.py
app/auth/: forms.py  routes.py
app/chat/: llm_client.py  routes.py
app/face_placeholder/: routes.py
app/main/: routes.py
app/static/css/: app.css
app/static/js/: auth.js  chat.js
app/templates/: admin.html  base.html  chat.html  login.html  register.html
app/templates/errors/: 404.html
tests/: conftest.py  test_auth.py  test_chat.py
